...
                }
                        + fadeOut(),
            ) {
                FloatingActionButton(
                    modifier = Modifier
                        .padding(all = 16.dp)
                        .testTag("fab_add_new_event"),
                    onClick = {
                        coroutineScope.launch {
                            shown = false
                            delay(300L)
                            onClickAddNewRegisteredEvent()
                        }
...
