<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="registered_events_list_header">Registered Events</string>
    <string name="add_events_on_fab_click">Add events clicking on (+)</string>
    <string name="add_new_event_title">Add a New Event</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sure_delete">Are you sure you want to delete this item?</string>
</resources>